Рефакторинг и подключение словаря

--- a/template/index.html
+++ b/template/index.html
@@ -83,7 +83,19 @@
 </head>
 
 <body>
-
+    <div class="uk-container menu">
+        <div class="uk-container-expand">
+            <div class="uk-card uk-card-body navigation">
+                <ul class="uk-subnav uk-subnav-pill" uk-margin>
+                    <li><a linktarget="paintings">Живопись</a></li>
+                    <li><a linktarget="architecture">Архитектура</a></li>
+                    <li><a linktarget="music">Музыка</a></li>
+                    <li><a linktarget="other">Другое</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
     <div class="uk-container">
         <div class="uk-container-expand">
             <ul uk-accordion="multiple: true" id="mainContent">
